Project

General

Profile

Actions

Bug #9492

closed

ruby won't build on Mac OS X versions before 10.6 - pthread_setname_np() not available

Bug #9492: ruby won't build on Mac OS X versions before 10.6 - pthread_setname_np() not available

Added by mistydemeo (Misty De Meo) over 12 years ago. Updated over 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:60524]

Description

The following commit added a usage of the pthread_setname_np() function on Darwin to set the timer thread name: https://github.com/ruby/ruby/commit/09c96a7858955f2b94238bd4bf38729f0d650f22

This function isn't available in all OS X versions; it was first added in 10.6. As a result, ruby will fail to compile on older OS X releases.

Updated by PvpDJgHP (William Thomas NELSON) over 12 years ago Actions #1 [ruby-core:60675]

I am also experiencing this issue.

There are still many Apple Xserve running OS X 10.5.8 (darwin 9.8) in production.

Updated by nobu (Nobuyoshi Nakada) over 12 years ago Actions #2 [ruby-core:60677]

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

Applied in changeset r44925.


configure.in: use pthread_setname_np only if available

  • configure.in: check if pthread_setname_np is available.
  • thread_pthread.c: pthread_setname_np is not available on old
    Darwins. [ruby-core:60524] [Bug #9492]

Updated by nobu (Nobuyoshi Nakada) over 12 years ago Actions #3 [ruby-core:60678]

  • Backport changed from 1.9.3: UNKNOWN, 2.0.0: UNKNOWN, 2.1: UNKNOWN to 1.9.3: DONTNEED, 2.0.0: DONTNEED, 2.1: REQUIRED

Updated by naruse (Yui NARUSE) over 12 years ago Actions #4 [ruby-core:60956]

  • Backport changed from 1.9.3: DONTNEED, 2.0.0: DONTNEED, 2.1: REQUIRED to 1.9.3: DONTNEED, 2.0.0: DONTNEED, 2.1: DONE

r45090.

Actions

Also available in: PDF Atom